--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  hand_signature: ^3.0.3
+  flutter_svg: ^2.0.10+1
+  shared_preferences: ^2.2.3
+  string_to_color: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/svgs/signature.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
