--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   hand_signature: ^3.0.3
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.3
-  string_to_color: ^2.0.0
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
